<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_root"
    tools:ignore="RtlSymmetry"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingTop="20dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <!-- Tema -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/lbl_theme" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/rb_theme_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb_theme_auto" />
            <RadioButton android:id="@+id/rb_theme_bright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb_theme_bright" />
            <RadioButton android:id="@+id/rb_theme_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb_theme_dark" />

        </RadioGroup>

    </LinearLayout>

    <!-- Producto -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/lbl_product"
            android:labelFor="@id/input_product"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_product"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </LinearLayout>

    <!-- Municipio -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/lbl_location"
            android:labelFor="@id/input_location"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_location"
            android:imeOptions="actionDone"
            android:inputType="text"/>

    </LinearLayout>

    <!-- Botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_download_api"
            android:text="@string/btn_download_api_data"
            style="@android:style/Widget.Material.Button.Borderless"
            android:alpha="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:id="@+id/btn_save"
                android:text="@string/btn_save_settings"
                style="@android:style/Widget.Material.Button.Borderless.Colored" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>