<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    card_view:cardElevation="0dp"
    card_view:cardBackgroundColor="@color/card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:contentDescription="@string/content_description_icon_gas_station"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/ic_gasolina"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/lbl_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_name"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_address"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_price"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/placeholder_price"
            android:gravity="end|center_vertical"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>